--- a/navmenu.html
+++ b/navmenu.html
@@ -2,9 +2,9 @@
   <ul id="navmenu-v">
     <li><a href="index.html">Home</a></li>
 
-    <li><a href="blog.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
 
-    <li><a href="prices.html">Packages</a></li>
+    <li><a href="packages.html">Packages</a></li>
 
     <li><a href="reserve.html">Reserve Your Special Day</a></li>
 
