--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <br>
       <br>
        <dl>
-	 <dd>~Option for Photo Montage for the rehearsal dinner (or later to watch with anniversay's), no limits, any and all photos you choose along with your choice of music.</dd>
-	 <dd>~You can also have your own site for all photos, videos, and the montage can be loacted. You can give permission for others to upload so your special day can be all found on this one site.</dd>
+	 <dd>~Option for Photo Montage for the rehearsal dinner (or later to watch with anniversary's), no limits, any and all photos you choose along with your choice of music.</dd>
+	 <dd>~You can also have your own site for all photos, videos, and the montage can be located. You can give permission for others to upload so your special day can be all found on this one site.</dd>
        </dl>
       <br>
       <br> <p>Please tell me what you want for your day/ week and we will go from there.</p> <p>Barb</p> 
