change working on index weddingsite for the photos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <br>
        <dl>
 	<dt><strong>Photo</strong></dt>
-	 <dd>~Option for second person as Photographer</dd>
-	 <dd>~Full Photo CD of all pictures taken including black and white, and color.  You have full rights, so you can download, go make prints, and copies</dd>
+	 <dd>~Option for Photographer</dd>
+	 <dd>~High Resolution photos taken throughout your day of everything happeing.  Getting ready, the ceremony, family pictures, reception, and dancing.</dd>
+	 <dd>~Recieve a Full Photo CD of all pictures taken.  You have full rights, so you can download, go make prints, and copies at your discretion.</dd>
        </dl>
       <br>
       <br>
