--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <dl>
 	<dt><strong>Photo</strong></dt>
 	 <dd>~Option for Photographer</dd>
-	 <dd>~High Resolution photos taken throughout your day of everything happeing.  Getting ready, the ceremony, family pictures, reception, and dancing.</dd>
+	 <dd>~High Resolution photos taken throughout your day of everything happening.  Getting ready, the ceremony, family pictures, reception, and dancing.</dd>
 	 <dd>~Recieve a Full Photo CD of all pictures taken.  You have full rights, so you can download, go make prints, and copies at your discretion.</dd>
        </dl>
       <br>
