fixed the duplicate sentences in index wed

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
        <dl>
       	<dt><strong>Video</strong></dt>
 	 <dd>~ The wedding will be recorded in HD</dd>
-	 <dd>~ Everything at the reception will be videotaped.~ Everything at the reception will be videotaped.</dd>
+	 <dd>~ Everything at the reception will be videotaped.</dd>
 	 <dd>~ All guests wishes for the couple will also be captured on film.</dd>
-	 <dd>~ Receive a DVD with everything recorded (days before the big day, the ceremony, the reception, guest wishes) and as a nice ending to the DVD a photo slide show from a few photos I was able to capture with your choice of music~ Receive a DVD with everything recorded (days before the big day, the ceremony, the reception, guest wishes) and as a nice ending to the DVD a photo slide show from a few photos I was able to capture with your choice of music</dd>
+	 <dd>~ Receive a DVD with everything recorded (days before the big day, the ceremony, the reception, guest wishes) and as a nice ending to the DVD a photo slide show from a few photos I was able to capture with your choice of music</dd>
 	 <dd>~Option to video days prior to the big event, like the bachelorette party, or lunch with a group of friends</dd>
        </dl>
       <br>
