Adding contract link

--- a/reserve.html
+++ b/reserve.html
@@ -24,6 +24,7 @@
 <img alt="" border="0" src="https://www.paypalobjects.com/WEBSCR-640-20110401-1/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 
+<a href="files/Contract.docx">Click here for contract.</a>
 
 
    </div>
