--- a/reserve.html
+++ b/reserve.html
@@ -9,7 +9,7 @@
     <div class="span-19 last">
       <h1>Reserve your Special Day</h1>
        <p>Soon to come, send me an email Barb.H@hotmail.com and let me know the date and location and we will go from there.  Or give me a call 404--408-5056.  Barb</p>
-<a href="files/contractforwedding.docx">Click here for contract.</a>
+<center><a href="files/contractforwedding.docx">Click here for contract.</a></center>
 
 
 
