add name, phone, number, websites to index pg on weddingsite

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 	 <dd>~You can also have your own site for all photos, videos, and the montage can be located. You can give permission for others to upload so your special day can be all found on this one site.</dd>
        </dl>
       <br>
-      <br> <p>Please tell me what you want for your day/ week and we will go from there.</p> <p>Barb</p> 
-    </div>
+      <br> <p>Please tell me what you want for your day/ week and we will go from there.</p>
+           <p>Barb Hoefener</p>
+		<p>404-408-5056</p>
+		<p>www.BarbsPhotoVideo.com</p>
+		<p>www.TheWeddingVideographer.org</p>
+	        </div>
 
 
 
