--- a/packages.html
+++ b/packages.html
@@ -9,15 +9,16 @@
     <div class="span-19 last">
       <h1>Packages</h1>
   <br> 
+    <p><strong>Ceremony:</strong> Video for 30 minutes- 1 hours, record the ceremony, and some guest wishes if possible, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. Only $299, if you need me for more time, add $100/hr).</p> 
 
     
-     <p><strong>Package Budget 1:</strong> Video for 3 hours, record the ceremony, events at reception, guest wishes, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. OR Photography for 3 hours, taking lots of pictures, get a full photo CD with all images and rights within 1-2 weeks .Only $499, if you need me for more time, add $100/hr).</p> 
+     <p><strong>Ceremony & 1/2 Reception 1:</strong> Video for 3 hours, record the ceremony, events at reception, guest wishes, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. OR Photography for 3 hours, taking lots of pictures, get a full photo CD with all images and rights within 1-2 weeks .Only $499, if you need me for more time, add $100/hr).</p> 
 <br>
-     <p><strong>Package Budget 2:</strong>  Video and photography for 3 hours.  Coverage includes some before time, the ceremony, reception events, guest wishes.  You receive 1 DVD and 1 full photo CD. Only $999, (if you need us for more time, add $200/hr).</p>
+     <p><strong>Ceremony & 1/2 Reception 2:</strong>  Video and photography for 3 hours.  Coverage includes some before time, the ceremony, reception events, guest wishes.  You receive 1 DVD and 1 full photo CD. Only $999, (if you need us for more time, add $200/hr).</p>
 <br>
-     <p><strong>Package 3:</strong>  Receive 3 DVDs, 3 Full Photo CDs, URL with photos, video, and montage; you have the option to have friends and family upload all their photos/videos so all pictures/ videos are in 1 place.  Receive a custom photo montage for your rehearsal dinner with all photos and songs of your wish.  Get entire wedding/ reception coverage. 2 people. Only $1999.</p>
+     <p><strong>Full Ceremony & Reception:</strong>  Receive 3 DVDs, 3 Full Photo CDs, URL with photos, video, and montage; you have the option to have friends and family upload all their photos/videos so all pictures/ videos are in 1 place.  Receive a custom photo montage for your rehearsal dinner with all photos and songs of your wish.  Get entire wedding/ reception coverage, capture all moments from the walk down the isle to you both leaving at the end of the night. 2 people video and photo. Only $1999.</p>
     <br>
-    <p><strong>Package 4:</strong>  Tell me what YOU envision for your week or special day; and we will make it happen.   I will do all I can to make you happy and do what you wish.  This is your day, not mine, I will do as you wish.</p>
+    <p><strong>Custom Package:</strong>  Tell me what YOU envision for your week or special day; and we will make it happen.   I will do all I can to make you happy and do what you wish.  This is your day, not mine, I will do as you wish.</p>
     <br>
     <p><Strong>Early Bird Special:</strong> If you pay for the entire evening at booking (instead of half for the deposit), you get 10% off.</p>
     
