make hours "hour" and add <br>

--- a/packages.html
+++ b/packages.html
@@ -9,8 +9,8 @@
     <div class="span-19 last">
       <h1>Packages</h1>
   <br> 
-    <p><strong>Ceremony:</strong> Video for 30 minutes- 1 hours, record the ceremony, and some guest wishes if possible, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. Only $299, if you need me for more time, add $100/hr).</p> 
-
+    <p><strong>Ceremony:</strong> Video for 30 minutes- 1 hour, record the ceremony, and some guest wishes if possible, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. Only $299, if you need me for more time, add $100/hr).</p> 
+<br>
     
      <p><strong>Ceremony & 1/2 Reception 1:</strong> Video for 3 hours, record the ceremony, events at reception, guest wishes, a nice ending with photos I happen to take.  You receive a DVD with rights within 1-2 weeks. OR Photography for 3 hours, taking lots of pictures, get a full photo CD with all images and rights within 1-2 weeks .Only $499, if you need me for more time, add $100/hr).</p> 
 <br>
