changed words in index and put in blu ray

--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
 
        <dl>
       	<dt><strong>Video</strong></dt>
-	 <dd>~ The wedding will be recorded in HD</dd>
-	 <dd>~ Everything at the reception will be videotaped.</dd>
-	 <dd>~ All guests wishes for the couple will also be captured on film.</dd>
-	 <dd>~ Receive a DVD with everything recorded (days before the big day, the ceremony, the reception, guest wishes) and as a nice ending to the DVD a photo slide show from a few photos I was able to capture with your choice of music</dd>
+	 <dd>~ Your special day will be recorded in HD</dd>
+	 <dd>~ Everything at the ceremony and reception will be videotaped.</dd>
+	 <dd>~ All guests wishes will also be captured on film.</dd>
+	 <dd>~ Your video will have a nice photo slide show ending of random photos taken set to your choice of music.</dd>
+	 <dd>~ Receive a Blu Ray and/or DVD with everything recorded.</dd>
 	 <dd>~Option to video days prior to the big event, like the bachelorette party, or lunch with a group of friends</dd>
        </dl>
       <br>
        <dl>
 	<dt><strong>Photo</strong></dt>
 	 <dd>~Option for Photographer</dd>
-	 <dd>~High Resolution photos taken throughout your day of everything happening.  Getting ready, the ceremony, family pictures, reception, and dancing.</dd>
-	 <dd>~Recieve a Full Photo CD of all pictures taken.  You have full rights, so you can download, go make prints, and copies at your discretion.</dd>
+	 <dd>~High Resolution photos taken throughout your day of everything happening: getting ready, the ceremony, family pictures, reception, and dancing.</dd>
+	 <dd>~Receive a Full High Resolution Photo CD of all pictures taken.  You have full rights, so you can download, make prints, and copies at your discretion.</dd>
        </dl>
       <br>
       <br>
