--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 
     <div class="span-20 last">
       <h1>Portfolio</h1>
-      <iframe src="http://weddings.irulan.homeunix.net:8080/" width="100%" height="800">
+      <iframe src="http://weddings.zeddworks.com:8080/" width="100%" height="800">
         <p>Your browser does not support iframes.</p>
       </iframe>
     </div>
