--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <p>Your wedding is a pivotal, unforgettable moment in your life, and a story in itself.
       Ultimately, your video & photos serve as a true witness to a beautiful day. 
       This will be one of the most cherished items once your celebration is over.</p>
-
+<br>
        <dl>
-      	<dt><strong>Video</strong></dt>
+      	<dt><strong>High Definition Video</strong></dt>
 	 <dd>~ Your special day will be recorded in HD</dd>
 	 <dd>~ Everything at the ceremony and reception will be videotaped.</dd>
 	 <dd>~ All guests wishes will also be captured on film.</dd>
@@ -22,9 +22,9 @@
 	 <dd>~ Receive a Blu Ray and/or DVD with everything recorded.</dd>
 	 <dd>~Option to video days prior to the big event, like the bachelorette party, or lunch with a group of friends</dd>
        </dl>
-      <br>
+     
        <dl>
-	<dt><strong>Photo</strong></dt>
+	<dt><strong>High Resolution Photo</strong></dt>
 	 <dd>~Option for Photographer</dd>
 	 <dd>~High Resolution photos taken throughout your day of everything happening: getting ready, the ceremony, family pictures, reception, and dancing.</dd>
 	 <dd>~Receive a Full High Resolution Photo CD of all pictures taken.  You have full rights, so you can download, make prints, and copies at your discretion.</dd>
@@ -32,9 +32,13 @@
       <br>
       <br>
        <dl>
-	 <dd>~Option for Photo Montage for the rehearsal dinner (or later to watch with anniversary's), no limits, any and all photos you choose along with your choice of music.</dd>
-	 <dd>~You can also have your own site for all photos, videos, and the montage can be located. You can give permission for others to upload so your special day can be all found on this one site.</dd>
-       </dl>
+	 <dd>~Option for <strong> Photo Montage </strong> for the rehearsal dinner (or later to watch with anniversary's), no limits, any and all photos you choose along with your choice of music.</dd>
+
+	 <dt><Strong>Included in Price</strong></dt>
+	 <dd>~Your own site to direct all friends and family to watch clips and view photos of your special day.</dd>
+	 <dd>~A Blu Ray and/or DVD (your choice), A photo CD of all images taken.  All media have full rights given, meaning no watermarks, no copyright, make as many copies as you like, go to walgreens and make prints.</dd>
+	 <dd>~All my post processing and editing time- usually triple plus- the time I was there. </dd>
+	 </dl>
       <br>
       <br> <p>Please tell me what you want for your day/ week and we will go from there.</p>
            <p>Barb Hoefener</p>
@@ -43,7 +47,8 @@
 		<p>www.TheWeddingVideographer.org</p>
 	        </div>
 
-
+<br>
+<br>
 
 
     <div align="center" class="span-24 last"><img class="frame" src=
