changed some of the br/ spaces

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 	 <dd>~High Resolution photos taken throughout your day of everything happening: getting ready, the ceremony, family pictures, reception, and dancing.</dd>
 	 <dd>~Receive a Full High Resolution Photo CD of all pictures taken.  You have full rights, so you can download, make prints, and copies at your discretion.</dd>
        </dl>
-      <br>
-      <br>
+      
        <dl>
 	 <dd>~Option for <strong> Photo Montage </strong> for the rehearsal dinner (or later to watch with anniversary's), no limits, any and all photos you choose along with your choice of music.</dd>
-
+<br>
 	 <dt><Strong>Included in Price</strong></dt>
 	 <dd>~Your own site to direct all friends and family to watch clips and view photos of your special day.</dd>
 	 <dd>~A Blu Ray and/or DVD (your choice), A photo CD of all images taken.  All media have full rights given, meaning no watermarks, no copyright, make as many copies as you like, go to walgreens and make prints.</dd>
 	 <dd>~All my post processing and editing time- usually triple plus- the time I was there. </dd>
 	 </dl>
       <br>
+      <strong>
       <br> <p>Please tell me what you want for your day/ week and we will go from there.</p>
            <p>Barb Hoefener</p>
 		<p>404-408-5056</p>
 		<p>www.BarbsPhotoVideo.com</p>
 		<p>www.TheWeddingVideographer.org</p>
 	        </div>
-
+</strong>
 <br>
 <br>
 
