adjusted photo montage option

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
        </dl>
       
        <dl>
-	 <dd>~Option for <strong> Photo Montage </strong> for the rehearsal dinner (or later to watch with anniversary's), no limits, any and all photos you choose along with your choice of music.</dd>
+       <dt><strong>Photo Montage</strong></dt>
+	 <dd>~Option of Photo Montage for the rehearsal dinner (or later to watch with anniversary's).  Send me all photos and music you want.  No limits.</dd>
 <br>
 	 <dt><Strong>Included in Price</strong></dt>
 	 <dd>~Your own site to direct all friends and family to watch clips and view photos of your special day.</dd>
